增加https,增加字段

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,6 +8,14 @@ port_DB = "3306"
 charset = "utf8"
 name_DB = "shop"
 username_DB = "root"
-password_DB = qq547961845
+password_DB = 78901214
 
 #Redis配置
+
+
+#Https配置
+EnableHTTPS = true
+EnableHttpTLS = true
+HTTPSPort = 9092
+HTTPSCertFile = "2_mushangyun.com.crt"
+HTTPSKeyFile = "3_mushangyun.com.key"  
