增加session控制，修改合作商接口

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -19,3 +19,6 @@ EnableHttpTLS = true
 HTTPSPort = 9092
 HTTPSCertFile = "2_mushangyun.com.crt"
 HTTPSKeyFile = "3_mushangyun.com.key"  
+
+#启动默认session配置
+session=true
