--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,9 +6,9 @@ runmode = dev
 host_DB = "127.0.0.1"
 port_DB = "3306"
 charset = "utf8"
-name_DB = "shop"
+name_DB = "shop_t"
 username_DB = "root"
-password_DB = qq547961845
+password_DB = 78901214
 
 #Redis配置
 
