--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = shop
-httpport = 8080
+httpport = 80
 runmode = dev
 
 #数据库使用mysql数据库
@@ -8,7 +8,7 @@ port_DB = "3306"
 charset = "utf8"
 name_DB = "shop_t"
 username_DB = "root"
-password_DB = qq547961845
+password_DB = 78901214
 
 #Redis配置
 
